--- a/index.html
+++ b/index.html
@@ -583,28 +583,32 @@
 
           <ul class="footer-sublist">
             <li class="footer-item">
-              <img
-                class="footer-photo"
-                src="./image/authors-facebook.png"
-                alt="facebook"
-              />
+              <a class="footer-link" href="">
+                <svg class="footer-icon">
+                  <use href="./image/symbol-defs.svg#icon-authors-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-item">
-              <img
-                class="footer-photo"
-                src="./image/authors-twitter.png"
-                alt="twitter"
-              />
+              <a class="footer-link" href="">
+                <svg class="footer-icon">
+                  <use href="./image/symbol-defs.svg#icon-authors-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-item">
-              <img
-                class="footer-photo"
-                src="./image/authors-instagram.png"
-                alt="instagrame"
-              />
+              <a class="footer-link" href="">
+                <svg class="footer-icon">
+                  <use href="./image/symbol-defs.svg#icon-authors-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-item">
-              <img class="footer-photo" src="./image/authors-in.png" alt="in" />
+            <a class="footer-link" href="">
+                <svg class="footer-icon">
+                  <use href="./image/symbol-defs.svg#icon-authors-in"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
