--- a/posts.html
+++ b/posts.html
@@ -7,16 +7,16 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">
-        <img src="./images/logo.webp" alt="logo" />
+      <a href="./posts.html">
+        <img src="./image/logo.webp" alt="logo" />
       </a>
       <nav>
         <ul>
           <li>
-            <a href="">Home</a>
+            <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="">Blog</a>
+            <a href="./blog.html">Blog</a>
           </li>
           <li>
             <a href="">About Us</a>
@@ -46,7 +46,7 @@
             cupidatat non proident.
           </p>
           <button type="button">Read More ></button>
-          <img src="./images/fecherd-photo.jpg" alt="man" />
+          <img src="./image/fecherd-photo.jpg" alt="man" />
         </article>
       </section>
       <!-- Posts section -->
@@ -54,7 +54,7 @@
         <h2>All posts</h2>
         <ul>
           <li>
-            <img src="./images/posts-posts1.webp" alt="Two woman" />
+            <img src="./image/posts-posts1.webp" alt="Two woman" />
             <p>Startup</p>
             <h3>Design tips for designers that cover everything you need</h3>
             <p>
@@ -64,7 +64,7 @@
             </p>
           </li>
           <li>
-            <img src="./images/posts-posts2.webp" alt="tablet" />
+            <img src="./image/posts-posts2.webp" alt="tablet" />
             <p>BUSINESS</p>
             <h3>How to build rapport with your web design clients</h3>
             <p>
@@ -74,7 +74,7 @@
             </p>
           </li>
           <li>
-            <img src="./images/posts-posts3.webp" alt="Two pouple" />
+            <img src="./image/posts-posts3.webp" alt="Two pouple" />
             <p>Startup</p>
             <h3>Logo design trends to avoid in 2022</h3>
             <p>
@@ -84,7 +84,7 @@
             </p>
           </li>
           <li>
-            <img src="./images/posts-posts4.webp" alt="" />
+            <img src="./image/posts-posts4.webp" alt="" />
             <p>TECHNOLOGY</p>
             <h3>8 Figma design systems you can download for free today</h3>
             <p>
@@ -94,7 +94,7 @@
             </p>
           </li>
           <li>
-            <img src="./images/posts-posts5.webp" alt="woman two" />
+            <img src="./image/posts-posts5.webp" alt="woman two" />
             <p>ECONOMY</p>
             <h3>Font sizes in UI design: The complete guide to follow</h3>
             <p>
@@ -112,22 +112,22 @@
         <h2>All Categories</h2>
         <ul>
           <li>
-            <img src="./images/categories-houseicon.webp" alt="house icon" />
+            <img src="./image/categories-houseicon.webp" alt="house icon" />
             <h3>Business</h3>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
           </li>
           <li>
-            <img src="./images/categories-rocket.webp" alt="rocket">
+            <img src="./image/categories-rocket.webp" alt="rocket">
             <h3>Startup</h3>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
           </li>
           <li>
-            <img src="./images/categories-economy.webp" alt="economy">
+            <img src="./image/categories-economy.webp" alt="economy">
             <h3>Economy</h3>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
           </li>
           <li>
-            <img src="./images/categories-cyborgicon.webp" alt="cyber">
+            <img src="./image/categories-cyborgicon.webp" alt="cyber">
             <h3>Technology</h3>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
           </li>
@@ -141,7 +141,7 @@
       </section>
     </main>
     <footer>
-      <img src="./images/logo.webp" alt="Logo">
+      <img src="./image/logo.webp" alt="Logo">
       <ul>
         <li>
           <a href="">Home</a>
