--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="header-link" href="./blog.html">Blog</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="">About Us</a>
+            <a class="header-link" href="./posts.html">About Us</a>
           </li>
         </ul>
         <button class="header-button btn" type="button">Subscribe</button>
