--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
             <a class="header-link" href="./blog.html">Blog</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="">About Us</a>
+            <a class="header-link" href="./posts.html">About Us</a>
           </li>
            <li class="header-item">
             <a class="header-link" href="">Contact us</a>
