--- a/posts.html
+++ b/posts.html
@@ -22,7 +22,7 @@
 
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <a href="./posts.html" class="header-logo">
           <img src="./image/logo.webp" alt="logo" class="header-photo" />
         </a>
@@ -49,7 +49,7 @@
     <main>
       <!-- featured Post section -->
       <section class="featured">
-        <div class="container">
+        <div class="container featured-container">
           <article class="featured-article">
             <h2 class="featured-subtitle">Featured Post</h2>
             <h1 class="featured-title">
@@ -67,12 +67,12 @@
               cupidatat non proident.
             </p>
             <button type="button" class="featured-button">Read More ></button>
-            <img
-              src="./image/fecherd-photo.jpg"
-              alt="man"
-              class="featured-photo"
-            />
           </article>
+          <img
+            src="./image/fecherd-photo.jpg"
+            alt="man"
+            class="featured-photo"
+          />
         </div>
       </section>
       <!-- Posts section -->
@@ -86,15 +86,17 @@
                 alt="Two woman"
                 class="posts-photo"
               />
-              <p class="posts-text">Startup</p>
-              <h3 class="posts-subtitle">
-                Design tips for designers that cover everything you need
-              </h3>
-              <p class="posts-info">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident.
-              </p>
+              <div class="posts-box">
+                <p class="posts-text">Startup</p>
+                <h3 class="posts-subtitle">
+                  Design tips for designers that cover everything you need
+                </h3>
+                <p class="posts-info">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident.
+                </p>
+              </div>
             </li>
             <li class="posts-item">
               <img
@@ -102,15 +104,17 @@
                 alt="tablet"
                 class="posts-photo"
               />
-              <p class="posts-text">BUSINESS</p>
-              <h3 class="posts-subtitle">
-                How to build rapport with your web design clients
-              </h3>
-              <p class="posts-info">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident.
-              </p>
+              <div>
+                <p class="posts-text">BUSINESS</p>
+                <h3 class="posts-subtitle">
+                  How to build rapport with your web design clients
+                </h3>
+                <p class="posts-info">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident.
+                </p>
+              </div>
             </li>
             <li class="posts-item">
               <img
@@ -118,27 +122,31 @@
                 alt="Two pouple"
                 class="posts-photo"
               />
-              <p class="posts-text">Startup</p>
-              <h3 class="posts-subtitle">
-                Logo design trends to avoid in 2022
-              </h3>
-              <p class="posts-info">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident.
-              </p>
+              <div>
+                <p class="posts-text">Startup</p>
+                <h3 class="posts-subtitle">
+                  Logo design trends to avoid in 2022
+                </h3>
+                <p class="posts-info">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident.
+                </p>
+              </div>
             </li>
             <li class="posts-item">
               <img src="./image/posts-posts4.webp" alt="" class="posts-photo" />
-              <p class="posts-text">TECHNOLOGY</p>
-              <h3 class="posts-subtitle">
-                8 Figma design systems you can download for free today
-              </h3>
-              <p class="posts-info">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident.
-              </p>
+              <div>
+                <p class="posts-text">TECHNOLOGY</p>
+                <h3 class="posts-subtitle">
+                  8 Figma design systems you can download for free today
+                </h3>
+                <p class="posts-info">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident.
+                </p>
+              </div>
             </li>
             <li class="posts-item">
               <img
@@ -146,15 +154,17 @@
                 alt="woman two"
                 class="posts-photo"
               />
-              <p class="posts-text">ECONOMY</p>
-              <h3 class="posts-subtitle">
-                Font sizes in UI design: The complete guide to follow
-              </h3>
-              <p class="posts-info">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident.
-              </p>
+              <div>
+                <p class="posts-text">ECONOMY</p>
+                <h3 class="posts-subtitle">
+                  Font sizes in UI design: The complete guide to follow
+                </h3>
+                <p class="posts-info">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident.
+                </p>
+              </div>
             </li>
           </ul>
           <button type="button" class="posts-prev">Prev</button>
