--- a/posts.html
+++ b/posts.html
@@ -167,8 +167,14 @@
               </div>
             </li>
           </ul>
-          <button type="button" class="posts-prev">Prev</button>
-          <button type="button" class="posts-next">Next</button>
+          <ul class="button-posts">
+            <li class="button-list">
+              <button type="button" class="posts-prev">Prev</button>
+            </li>
+            <li class="button-list2">
+              <button type="button" class="posts-next">Next</button>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- All Categories section -->
@@ -177,44 +183,52 @@
           <h2 class="categories-title">All Categories</h2>
           <ul class="categories-list">
             <li class="categories-item">
-              <img
-                src="./image/categories-houseicon.webp"
-                alt="house icon"
-                class="categories-photo"
-              />
+              <div class="categories-div">
+                <img
+                  src="./image/categories-houseicon.webp"
+                  alt="house icon"
+                  class="categories-photo"
+                />
+              </div>
               <h3 class="categories-subtitle">Business</h3>
               <p class="categories-text">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
               </p>
             </li>
             <li class="categories-item">
-              <img
-                src="./image/categories-rocket.webp"
-                alt="rocket"
-                class="categories-photo"
-              />
+              <div class="categories-div">
+                <img
+                  src="./image/categories-rocket.webp"
+                  alt="rocket"
+                  class="categories-photo"
+                />
+              </div>
               <h3 class="categories-subtitle">Startup</h3>
               <p class="categories-text">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
               </p>
             </li>
             <li class="categories-item">
-              <img
-                src="./image/categories-economy.webp"
-                alt="economy"
-                class="categories-photo"
-              />
+              <div class="categories-div">
+                <img
+                  src="./image/categories-economy.webp"
+                  alt="economy"
+                  class="categories-photo"
+                />
+              </div>
               <h3 class="categories-subtitle">Economy</h3>
               <p class="categories-text">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
               </p>
             </li>
             <li class="categories-item">
-              <img
-                src="./image/categories-cyborgicon.webp"
-                alt="cyber"
-                class="categories-photo"
-              />
+              <div class="categories-div">
+                <img
+                  src="./image/categories-cyborgicon.webp"
+                  alt="cyber"
+                  class="categories-photo"
+                />
+              </div>
               <h3 class="categories-subtitle">Technology</h3>
               <p class="categories-text">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
