--- a/posts.html
+++ b/posts.html
@@ -240,44 +240,54 @@
       <!-- Join section -->
       <section class="join">
         <div class="container">
-          <h2 class="join-title">Join our team to be a part of our story</h2>
-          <p class="join-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt.
-          </p>
-          <button type="button" class="join-button">Join Now</button>
+          <article class="join-article">
+            <h2 class="join-title">Join our team to be a part of our story</h2>
+            <p class="join-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt.
+            </p>
+
+            <button type="button" class="join-button">Join Now</button>
+          </article>
         </div>
       </section>
     </main>
     <footer class="footer">
       <div class="container">
-        <img src="./image/logo.webp" alt="Logo" class="footer-logo" />
-        <ul class="footer-list">
-          <li class="footer-item">
-            <a href="" class="footer-page">Home</a>
-          </li>
-          <li class="footer-item">
-            <a href="" class="footer-page">Blog</a>
-          </li>
-          <li class="footer-item">
-            <a href="" class="footer-page">About us</a>
-          </li>
-          <li class="footer-item">
-            <a href="" class="footer-page">Contact us</a>
-          </li>
-          <li class="footer-item">
-            <a href="" class="footer-page">Privacy Policy</a>
-          </li>
-        </ul>
-        <h2 class="footer-title">
-          Subscribe to our news letter to get latest updates and news
-        </h2>
-        <form class="footer-form">
-          <input type="email" class="footer-input" />
-          <button type="submit" class="footer-button">Subscribe</button>
-        </form>
+        <div class="footer-div">
+          <img src="./image/logo.webp" alt="Logo" class="footer-logo" />
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a href="" class="footer-page">Home</a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-page">Blog</a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-page">About us</a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-page">Contact us</a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-page">Privacy Policy</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-div2">
+          <h2 class="footer-title">
+            Subscribe to our news letter to get latest updates and news
+          </h2>
+          <form class="footer-form">
+            <input type="email" class="footer-input" />
+
+            <button type="submit" class="footer-button">Subscribe</button>
+          </form>
+        </div>
+<div class="footer-text">
         <p class="footer-info">Finstreet 118 2561 Fintown</p>
         <p class="footer-info">Hello@finsweet.com 020 7993 2905</p>
+      </div>
         <ul class="footer-socials">
           <li class="footer-social">
             <a href="" class="footer-link"> </a>
