--- a/posts.html
+++ b/posts.html
@@ -284,25 +284,33 @@
             <button type="submit" class="footer-button">Subscribe</button>
           </form>
         </div>
+        <div class="footer-solid">
 <div class="footer-text">
         <p class="footer-info">Finstreet 118 2561 Fintown</p>
         <p class="footer-info">Hello@finsweet.com 020 7993 2905</p>
       </div>
         <ul class="footer-socials">
           <li class="footer-social">
-            <a href="" class="footer-link"> </a>
+            <a href="" class="footer-social">
+              <img src="./image/facebook (1).webp" alt="">
+            </a>
           </li>
           <li class="footer-social">
-            <a href="" class="footer-link"> </a>
+            <a href="" class="footer-link">
+              <img src="./image/twitter (1).webp" alt=""> </a>
           </li>
           <li class="footer-social">
-            <a href="" class="footer-link"> </a>
+            <a href="" class="footer-link">
+              <img src="./image/inst.webp" alt=""> </a>
           </li>
           <li class="footer-social">
-            <a href="" class="footer-link"> </a>
+            <a href="" class="footer-link"> 
+              <img src="./image/Linked (1).webp" alt="">
+            </a>
           </li>
         </ul>
       </div>
+    </div>
     </footer>
   </body>
 </html>
