--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
   <body>
     <header class="header-section">
       <div class="container header-section">
-        <img class="logo" src="./image/Logo.png" alt="logo" />
+        <img class="logo" src="./image/Logo.webp" alt="logo" />
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Home</a>
@@ -56,7 +56,7 @@
             cupidatat non proident.
           </p>
           <button class="hero-button" type="button">Read More ></button>
-          <img class="hero-photo" src="./image/hero-photo.png" alt="hero" />
+          <img class="hero-photo" src="./image/hero-photo.webp" alt="hero" />
         </div>
       </section>
       <section class="posts-section">
@@ -72,7 +72,7 @@
                   cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   occaecat cupidatat non proident.
                 </p>
-                <img class="pasts-photo" src="./image/posts1.png" alt="" />
+                <img class="pasts-photo" src="./image/posts1.webp" alt="" />
               </article>
             </li>
 
@@ -87,7 +87,7 @@
                   cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   occaecat cupidatat non proident.
                 </p>
-                <img class="pasts-photo" src="./image/posts2.png" alt="" />
+                <img class="pasts-photo" src="./image/posts2.webp" alt="" />
               </article>
             </li>
 
@@ -100,7 +100,7 @@
                   cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   occaecat cupidatat non proident.
                 </p>
-                <img class="pasts-photo" src="./image/posts3.png" alt="" />
+                <img class="pasts-photo" src="./image/posts3.webp" alt="" />
               </article>
             </li>
 
@@ -115,7 +115,7 @@
                   cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   occaecat cupidatat non proident.
                 </p>
-                <img class="pasts-photo" src="./image/posts4.png" alt="" />
+                <img class="pasts-photo" src="./image/posts4.webp" alt="" />
               </article>
             </li>
 
@@ -130,7 +130,7 @@
                   cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   occaecat cupidatat non proident.
                 </p>
-                <img class="pasts-photo" src="./image/posts1.png" alt="" />
+                <img class="pasts-photo" src="./image/posts1.webp" alt="" />
               </article>
               <button class="pasts-button" type="button">Prev</button>
               <button class="pasts-button" type="button">Next</button>
@@ -144,7 +144,7 @@
           <ul class="plan-list">
             <li class="plan-item">
               <article>
-                <img src="./image/plan-icon1.png" alt="icon1" />
+                <img src="./image/plan-icon1.webp" alt="icon1" />
                 <h2>Business</h2>
                 <p class="plan-text">
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -153,7 +153,7 @@
             </li>
             <li class="plan-item">
               <article>
-                <img src="./image/plan-icon2.png" alt="icon2" />
+                <img src="./image/plan-icon2.webp" alt="icon2" />
                 <h2 class="plan-title">Startup</h2>
                 <p class="plan-text">
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -162,7 +162,7 @@
             </li>
             <li class="plan-item">
               <article>
-                <img src="./image/plan-icon3.png" alt="icon3" />
+                <img src="./image/plan-icon3.webp" alt="icon3" />
                 <h2 class="plan-title">Economy</h2>
                 <p class="plan-text">
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -171,7 +171,7 @@
             </li>
             <li class="plan-item">
               <article>
-                <img src="./image/plan-icon4.png" alt="icon4" />
+                <img src="./image/plan-icon4.webp" alt="icon4" />
                 <h2 class="plan-title">Technology</h2>
                 <p class="plan-text">
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -195,7 +195,7 @@
     <footer class="footer-section">
       <div class="container">
         <a class="footer-link" href="">
-          <img class="footer-photo" src="./image/Logo.png" alt="logo" />
+          <img class="footer-photo" src="./image/Logo.webp" alt="logo" />
         </a>
         <ul class="footer-list">
           <li class="footer-item">
@@ -236,26 +236,26 @@
           <li class="footer-item">
             <img
               class="footer-photo"
-              src="./image/authors-facebook.png"
+              src="./image/authors-facebook.webp"
               alt="facebook"
             />
           </li>
           <li class="footer-item">
             <img
               class="footer-photo"
-              src="./image/authors-twitter.png"
+              src="./image/authors-twitter.webp"
               alt="twitter"
             />
           </li>
           <li class="footer-item">
             <img
               class="footer-photo"
-              src="./image/authors-instagram.png"
+              src="./image/authors-instagram.webp"
               alt="instagrame"
             />
           </li>
           <li class="footer-item">
-            <img class="footer-photo" src="./image/authors-in.png" alt="in" />
+            <img class="footer-photo" src="./image/authors-in.webp" alt="in" />
           </li>
         </ul>
       </div>
