--- a/posts.html
+++ b/posts.html
@@ -69,7 +69,7 @@
             <button type="button" class="featured-button">Read More ></button>
           </article>
           <img
-            src="./image/fecherd-photo.jpg"
+            src="./image/fecherd-photo.webp"
             alt="man"
             class="featured-photo"
           />
