--- a/posts.html
+++ b/posts.html
@@ -184,11 +184,14 @@
           <ul class="categories-list">
             <li class="categories-item">
               <div class="categories-div">
-                <img
+                <svg class="categories-svg">
+                    <use href="./image/symbol-defs.svg#icon-plan-icon1"></use>
+                  </svg>
+                <!-- <img
                   src="./image/categories-houseicon.webp"
                   alt="house icon"
                   class="categories-photo"
-                />
+                /> -->
               </div>
               <h3 class="categories-subtitle">Business</h3>
               <p class="categories-text">
@@ -197,11 +200,9 @@
             </li>
             <li class="categories-item">
               <div class="categories-div">
-                <img
-                  src="./image/categories-rocket.webp"
-                  alt="rocket"
-                  class="categories-photo"
-                />
+                <svg class="categories-svg">
+                    <use href="./image/symbol-defs.svg#icon-plan-icon2"></use>
+                  </svg>
               </div>
               <h3 class="categories-subtitle">Startup</h3>
               <p class="categories-text">
@@ -210,11 +211,9 @@
             </li>
             <li class="categories-item">
               <div class="categories-div">
-                <img
-                  src="./image/categories-economy.webp"
-                  alt="economy"
-                  class="categories-photo"
-                />
+               <svg class="categories-svg">
+                    <use href="./image/symbol-defs.svg#icon-plan-icon3"></use>
+                  </svg>
               </div>
               <h3 class="categories-subtitle">Economy</h3>
               <p class="categories-text">
@@ -223,11 +222,9 @@
             </li>
             <li class="categories-item">
               <div class="categories-div">
-                <img
-                  src="./image/categories-cyborgicon.webp"
-                  alt="cyber"
-                  class="categories-photo"
-                />
+                <svg class="categories-svg">
+                    <use href="./image/symbol-defs.svg#icon-plan-icon4"></use>
+                  </svg>
               </div>
               <h3 class="categories-subtitle">Technology</h3>
               <p class="categories-text">
@@ -285,32 +282,42 @@
           </form>
         </div>
         <div class="footer-solid">
-<div class="footer-text">
-        <p class="footer-info">Finstreet 118 2561 Fintown</p>
-        <p class="footer-info">Hello@finsweet.com 020 7993 2905</p>
+          <div class="footer-text">
+            <p class="footer-info">Finstreet 118 2561 Fintown</p>
+            <p class="footer-info">Hello@finsweet.com 020 7993 2905</p>
+          </div>
+          <ul class="footer-socials">
+            <li class="footer-social">
+              <a href="https://www.facebook.com/?locale=uk_UA" class="footer-social">
+                <svg class="iconSVG">
+                    <use href="./image/symbol-defs.svg#icon-authors-facebook"></use>
+                  </svg>
+              </a>
+            </li>
+            <li class="footer-social">
+              <a href="https://x.com/?lang=uk" class="footer-link">
+                <svg class="iconSVG">
+                    <use href="./image/symbol-defs.svg#icon-authors-twitter"></use>
+                  </svg>
+              </a>
+            </li>
+            <li class="footer-social">
+              <a href="https://www.instagram.com/" class="footer-link">
+                <svg class="iconSVG">
+                    <use href="./image/symbol-defs.svg#icon-authors-instagram"></use>
+                  </svg>
+              </a>
+            </li>
+            <li class="footer-social">
+              <a href="" class="footer-link">
+                <svg class="iconSVG">
+                    <use href="./image/symbol-defs.svg#icon-authors-in"></use>
+                  </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-        <ul class="footer-socials">
-          <li class="footer-social">
-            <a href="" class="footer-social">
-              <img src="./image/facebook (1).webp" alt="">
-            </a>
-          </li>
-          <li class="footer-social">
-            <a href="" class="footer-link">
-              <img src="./image/twitter (1).webp" alt=""> </a>
-          </li>
-          <li class="footer-social">
-            <a href="" class="footer-link">
-              <img src="./image/inst.webp" alt=""> </a>
-          </li>
-          <li class="footer-social">
-            <a href="" class="footer-link"> 
-              <img src="./image/Linked (1).webp" alt="">
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
     </footer>
   </body>
 </html>
